# agents-learn-runtime

./: .gitignore  Makefile  README.md  generate_traces.persistent.yaml  generate_traces.stateless.yaml  pyproject.toml
pythonformer/: __init__.py  cache.py  cli.py  config.py  generator.py  llm.py  nl.py  storage.py
pythonformer/benchmark/: benchmark.py  config.py
pythonformer/codeact/: agent.py  cli_message_logger.py  events.py  html_trace_logger.py  interpreter.py  json_model_event_logger.py  json_trace_logger.py  tool.py
pythonformer/families/: __init__.py  base.py  factory.py  knapsack.py  navigation.py  rule_diagnosis.py
pythonformer/task_configs/: easy.json  hard.json  medium.json
scripts/: compare_benchmarks.py  get_trace_stats.py  main_table.py
train/: README.md  benchmark.sh  dataloader.py  inference_a100.sh  qwen3_8b_axolotl.py  train_a100.sh
train/assets/benchmark_configs/: cross_flora_persistent_easy.yaml  cross_flora_persistent_medium.yaml  cross_plora_reset_easy.yaml  cross_plora_reset_medium.yaml  easy_base.yaml  easy_lora.yaml  forget_easy_base.yaml  forget_easy_lora.yaml  forget_medium_base.yaml  forget_medium_lora.yaml  medium_base.yaml  medium_lora.yaml  react_easy_base.yaml  react_easy_lora.yaml  react_medium_base.yaml  react_medium_lora.yaml
train/assets/task_configs/: easy_100.json  medium_100.json
train/configs/: axolotl_qwen3_8b_forget_a100.yaml  axolotl_qwen3_8b_persistent_a100.yaml  axolotl_qwen3_8b_react_a100.yaml
